--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-spring/web": "^9.7.5",
     "chart.js": "^4.4.3",
     "express": "^4.19.2",
     "formidable": "^3.5.1",
+    "framer-motion": "^12.5.0",
     "fs": "^0.0.1-security",
     "ml-regression": "^5.0.0",
     "mongoose": "^8.5.1",
